@@ -232,7 +232,10 @@ class RulesGenerator(FileGenerator):
 
                 if (not '/.svn' in orig_path) and\
                         os.path.isfile(orig_path):
-                    dest_path = os.path.dirname(dest_path)
+                    if skel_name == "conffiles_skel":
+                        dest_path = dest_path + config['config_extension']
+                    else:
+                        dest_path = os.path.dirname(dest_path)
                     self.__add_dhinstall(orig_path, dest_path)
                 elif os.path.islink(orig_path):
                     dest_path = os.path.dirname(dest_path)
@@ -262,33 +265,23 @@ class RulesGenerator(FileGenerator):
     def __add_dhinstall(self, orig_path, dest_path):
         if not dest_path:
             return
-        #dest_path = os.path.dirname(dest_path)
-        command = ''
-	    # If we aren't working with config files or we are working with them but has the appropiate
-	    # extension fill the command
-        if not ('gcs/conffiles_skel/' in orig_path) or orig_path.endswith(config['config_extension']):
-            exclude_arg = ''
-            if os.path.isdir(orig_path + '/.svn'):
-                exclude_arg = '--exclude=.svn'
-            command = '\tdh_install %s "%s" "%s"' % (exclude_arg, orig_path, dest_path)
 
-        if command:
-            self.dhinstall_list.append(command)
+        exclude_arg = ''
+        if os.path.isdir(orig_path + '/.svn'):
+            exclude_arg = '--exclude=.svn'
+
+        command = '\tdh_install %s "%s" "%s"' % (exclude_arg, orig_path, dest_path)
+        self.dhinstall_list.append(command)
 
 
     def __add_copy(self, orig_path, dest_path):
         if not dest_path:
             return
-        #dest_path = os.path.dirname(dest_path)
-        command = ''
-	    # If we aren't working with config files or we are working with them but has the appropiate
-	    # extension fill the command
-        if not ('gcs/conffiles_skel/' in orig_path) or orig_path.endswith(config['config_extension']):
-            dest_path = os.path.join('debian', config['info']['name'], dest_path)
-            command = '\tcp -d "%s" "%s"' % (orig_path, dest_path)
+        
+        dest_path = os.path.join('debian', config['info']['name'], dest_path)
+        command = '\tcp -d "%s" "%s"' % (orig_path, dest_path)
 
-        if command:
-            self.copy_list.append(command)
+        self.copy_list.append(command)
 
 
 
